[package]
name = "cc-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.5"
serde = "1.0.132"
log = "0.4.1"
pretty_env_logger = "0.4.0"
strum = "0.23"
strum_macros = "0.23"
# lazy_static = "1.4.0"
mongodb = "2.1.0"
serde_json = "1.0"